feat: 完成邀请码注册能力
